# seahorse

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPERIMENT_READINESS.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  README_REVIEWERS.md  REPO_CLEANUP_PLAN.md  SECURITY.md  best_config.yaml  configs  mkdocs.yml  pyproject.toml  requirements.txt  temp_home.html  temp_intensity_viz.py  train.py  try_data.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_feedback.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
archive/: __init__.py  registry.py
archive/benchmark/: __init__.py  intensity_plot.py
archive/data/: synthetic.py
bench_out/: report.html  results.json  table_test_nll.csv
bench_out/hpo/: auto_stpp_best.yaml  deep_stpp_best.yaml  neural_stpp_best.yaml
data/: test.jsonl  train.jsonl  val.jsonl
data/sthp0/: test.jsonl  train.jsonl  val.jsonl
docs/: BENCHMARK.md  DEVELOPMENT.md  EXPERIMENT_READINESS.md  PEGASUS_CAMPAIGN.md  adding-a-model.md  architecture.md  benchmarks.md  cite.md  cli.md  data-format.md  evaluation.md  evaluation_layout.md  getting-started.md  index.md  metrics_catalog.md  metrics_paper_ready.md  model-capability-matrix.md  overview.md  paper-reproduction.md  python-api.md  why-seahorse.md
docs/assets/: extra.css  extra.js  hero.css
docs/benchmark/: artifacts.md  compare.md  presets.md  tune.md
docs/datasets/: add-dataset.md  catalog.md  conversion.md  hf-datasets.md  overview.md
docs/examples/: benchmark-models.md  case-study.md  cli_examples.md  colabs.md  evaluate-and-visualize-results.md  evaluate-and-visualize.md  inspect-data.md  modeling-events-in-space-and-time.md  (+3 more)
examples/: building_a_research_model.py  modeling_events_in_space_and_time.py  tutorial_utils.py
experiments/: exp_audit_sthp_data_and_inputs.py  exp_check_intensity_grid_parity.py  exp_plot_neural_stpp_intensity.py  exp_repro_autostpp_synth_sthp.py  exp_saved_model_ll_vs_smoothed.py  exp_synth_ll_vs_smoothed.py  exp_wasserstein_smoothed_nll.py
overrides/: main.html
scripts/: aggregate_hawkesnest_predictive_kde.py  benchmark_pinwheel.py  build_campaign_index.py  gen_sthp0_splits.py  gen_sthp_splits.py  generate_hawkesnest_suite_ground_truth.py  hawkesnest_predictive_family_metrics.py  make_suite3_paper_artifacts.py  make_training_time_diagnostics.py  paper_readiness_report.py  pegasus_bench_group.sbatch  pegasus_campaign_env.sh  pegasus_eval_metrics.sbatch  pegasus_eval_predictive_compare.sbatch  pegasus_eval_surface.sbatch  pegasus_hawkesnest_predictive_kde.sbatch  pegasus_hawkesnest_suite_campaign.sbatch  pegasus_realdata_bench_curve.sbatch  pegasus_tune_preset.sbatch  print_hawkesnest_easy_hard_submit_commands.sh  reprocess_hawkesnest_easy_hard_v2.py  resolve_bench_eval_targets.py  resolve_hawkesnest_campaign_eval_targets.py  resolve_hawkesnest_predictive_kde_targets.py  run_eval_metrics.py  run_realdata_bench_with_curve.py  slurm_eval_metrics_batched_validation.sbatch  slurm_eval_metrics_exact_all_datasets.sbatch  slurm_eval_metrics_exact_validation.sbatch  slurm_eval_metrics_native_validation.sbatch  slurm_job_summary.py  submit_bench_eval_metrics.sh  submit_hawkesnest_campaign_eval.sh  submit_hawkesnest_predictive_kde.sh  submit_hawkesnest_suite_family.sh  submit_realdata_family.sh  synthetic_suite_campaign.py  tiny_train.sh  tune_factorized_cnf_gpu.sbatch  tune_factorized_gmm_cpu.sbatch  (+2 more)
seahorse/: __init__.py  __main__.py  registry.py  utils.py
src/: unified_stpp
tests/: eval_test_helpers.py  test_aggregate_hawkesnest_predictive_kde.py  test_api_estimator.py  test_api_evaluation.py  test_api_persistence.py  test_api_plotting.py  test_api_sampling.py  test_auto_stpp.py  test_auto_stpp_faithful.py  test_auto_stpp_state_event_parity.py  test_benchmark_config.py  test_checkpoint_selection.py  test_config_resolution.py  test_data_hub.py  test_data_module.py  test_data_resolution.py  test_deep_stpp_state_event_parity.py  test_demo_gru_gaussian.py  test_diffusion_stpp.py  test_eval_artifacts.py  test_evaluate_cli.py  test_evaluation_import_audit.py  test_factorized.py  test_generate_hawkesnest_suite_ground_truth.py  test_hawkesnest_predictive_family_metrics.py  test_hf_dataset_smoke.py  test_intensity_viz.py  test_ll_equivalence.py  test_metric_profiles.py  test_neural_stpp_attncnf.py  test_neural_stpp_bugfixes.py  test_neural_stpp_cond_gmm.py  test_neural_stpp_jumpcnf.py  test_neural_stpp_shared_foundation.py  test_neural_stpp_state_event_parity.py  test_nsmpp.py  test_paper_readiness_report.py  test_predictive_benchmark.py  test_predictive_compare.py  test_raw_data_path.py  (+14 more)
unified_stpp/: __init__.py  __main__.py  config_utils.py  registry.py  utils.py
(+1026 files in other folders)
