[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seahorse-stpp"
version = "0.1.0"
description = "Seahorse: unified benchmarking for spatio-temporal point-process models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yahya Aalaila" }]
dependencies = [
  "torch>=2.8.0",
  "pytorch-lightning>=2.3.3",
  "numpy>=1.24.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7.0",
  "tqdm>=4.65.0",
  "pydantic>=2.0",
  "pandas>=2.0",
  "jinja2>=3.0",
  "joblib>=1.3",
  "scipy>=1.10.0",
  "POT>=0.9.0",
  "scikit-learn>=1.3.0",
  "huggingface_hub>=0.24.0",
  "torchdiffeq>=0.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
]
runner = []
hpo = [
  "ray[tune]>=2.43.0",
]
docs = [
  "mkdocs-material>=9.5",
]
all = [
  "seahorse-stpp[runner,hpo,docs]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["seahorse", "seahorse.*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["runs", "artifacts", ".venv", "seahorse/data_cache"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
