[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seahorse-stpp"
version = "0.1.0"
description = "Seahorse: unified benchmarking for spatio-temporal point-process models"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "Yahya Aalaila" },
  { name = "Gerrit Großmann" },
  { name = "Sebastian Vollmer" },
]
keywords = [
  "spatio-temporal",
  "point-process",
  "hawkes",
  "neural-stpp",
  "benchmark",
  "pytorch",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.8.0",
  "pytorch-lightning>=2.3.3",
  "numpy>=1.24.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7.0",
  "tqdm>=4.65.0",
  "pydantic>=2.0",
  "pandas>=2.0",
  "jinja2>=3.0",
  "joblib>=1.3",
  "scipy>=1.10.0",
  "POT>=0.9.0",
  "scikit-learn>=1.3.0",
  "huggingface_hub>=0.24.0",
  "torchdiffeq>=0.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
]
runner = []
hpo = [
  "ray[tune]>=2.43.0",
]
docs = [
  "mkdocs-material>=9.5",
]
all = [
  "seahorse-stpp[runner,hpo,docs]",
]

[project.urls]
Homepage = "https://github.com/YahyaAalaila/seahorse"
Repository = "https://github.com/YahyaAalaila/seahorse"
Documentation = "https://yahyaaalaila.github.io/seahorse/"
Issues = "https://github.com/YahyaAalaila/seahorse/issues"

[project.scripts]
seahorse = "seahorse.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seahorse", "seahorse.*"]

[tool.setuptools.package-data]
seahorse = ["configs/*.yaml"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["runs", "artifacts", ".venv", "seahorse/data_cache"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
